--- a/.gitignore
+++ b/.gitignore
@@ -268,5 +268,5 @@ dmypy.json
 # pytype static type analyzer
 .pytype/
 
-# Cython debug symbols
-cython_debug/
+# remove all CST simultations
+/CST
